# reenact

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: login_template.json  quotes_browse.json
schema/: reenact.schema.json
src/reenact/: __init__.py  cli.py  config.py  interpolation.py  migrations.py  schema.py  stealth.py  storage.py
src/reenact/recorder/: __init__.py  injected.js  recorder.py  selectorgen.py
src/reenact/replayer/: __init__.py  engine.py  resolver.py  result.py  waits.py
tests/: test_interpolation.py  test_recorder.py  test_replayer.py  test_schema.py  test_selectorgen.py
