[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reenact"
version = "0.1.0"
description = "Browser record/replay tool — deterministic, zero AI deps"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sanskar Jaiswal", email = "sanskar.jaiswal@betsol.com" }]
keywords = ["browser", "automation", "record", "replay", "playwright", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/BetsolLLC/reenact"
Repository = "https://github.com/BetsolLLC/reenact"
Issues = "https://github.com/BetsolLLC/reenact/issues"
dependencies = [
    "playwright>=1.44",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
reenact = "reenact.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/reenact"]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TID"]
ignore = ["B008"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src/reenact"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
